<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SchoolPlanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="advisor_s_computing_id_">Advisor\'s Computing ID:</string>
    <string name="password_">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="enter_student_s_id_">Enter Student\'s ID:</string>
    <string name="enter_student_s_computing_id_">Enter Student\'s Computing ID:</string>
    <string name="search">Search</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="student_s_grade">Student\'s Grade</string>
    <string name="student_s_courses">Student\'s Courses</string>
    <string name="student_s_major">Student\'s Major</string>
    <string name="show_info_here_">Show info here!</string>
    <string name="title_activity_grade">Grade</string>
    <string name="title_activity_course">Course</string>
    <string name="title_activity_major">Major</string>
    <string name="show_major_here_">Show major here.</string>
    <string name="change_major">Change Major</string>
    <string name="courses">Courses</string>
    <string name="show_courses_here_">Show courses here!</string>
    <string name="add_course">Add Course</string>
    <string name="swap_courses">Swap courses</string>
    <string name="drop_course">Drop course</string>
    <string name="show_student_s_grade_for_each_course_and_cgpa">Show student\'s grade for each course and CGPA</string>
    <string name="schedule">Schedule</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="show_daily_schedule_here_">Show daily schedule here!</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="title_activity_chat">Chat</string>
    <string name="student_and_advisor_are_able_to_chat_on_this_activity_">Student and advisor are able to chat on this activity.</string>
    <string name="chat">Leave a Message</string>
    <string name="title_activity_advisor_login">AdvisorLogin</string>
    <string name="title_activity_student_login">StudentLogin</string>
    <string name="advisor">Advisor</string>
    <string name="student">Student</string>
    <string name="title_activity_student_logged">StudentLogged</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="grade">Grade</string>
    <string name="course">Course</string>
    <string name="student_s_computing_id">Student\'s Computing ID</string>
    <string name="title_activity_appointment">Appointment</string>
    <string name="student_can_make_appointment_with_advisor_at_this_activity">Student can make appointment with advisor at this activity</string>
    <string name="title_activity_advisor_logged">AdvisorLogged</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_number">Student Number</string>
    <string name="computing_id">Computing ID@sfu.ca</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_signup">Signup</string>
    <string name="sign_up">Sign Up</string>

    <string name="Professor">Professor</string>
    <string name="feedback_received">Feedback Received!</string>
    <string name="see_feedback">See Feedback</string>
    <string name="app_settings">App Settings</string>
    <string name="font_large">Large</string>
    <string name="font_small">Small</string>
    <string name="first">First</string>
    <string name="cid">CID</string>
    <string name="last">Last</string>
    <string name="Acode">Access Code</string>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="time">
        <item>9:00-10:00</item>
        <item>10:00-11:00</item>
        <item>11:00-12:00</item>
        <item>13:00-14:00</item>
        <item>14:00-15:00</item>
        <item>15:00-16:00</item>
    </string-array>
    <string-array name="menu">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <string name="enter_feedback">Tell us what you think!</string>
    <string name="no_dfeedback">No Feedback Yet!</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="grade1">grade1</string>
    <string name="course2">course2</string>
    <string name="course1">course1</string>
    <string name="grade2">grade2</string>
    <string name="course3">course3</string>
    <string name="grade3">grade3</string>
    <string name="course4">course4</string>
    <string name="grade4">grade4</string>
    <string name="course5">course5</string>
    <string name="grade5">grade5</string>
    <string name="course6">course6</string>
    <string name="grade6">grade6</string>
    <string name="course7">course7</string>
    <string name="grade7">grade7</string>
    <string name="course8">course8</string>
    <string name="grade8">grade8</string>
    <string name="course9">course9</string>
    <string name="grade9">grade9</string>
    <string name="course10">course10</string>
    <string name="grade10">grade10</string>
    <string name="taking1">taking1</string>
    <string name="taking2">taking2</string>
    <string name="taking4">taking4</string>
    <string name="studentid">studentid</string>
    <string name="computingid">computingid</string>
    <string name="taking3">taking3</string>
    <string name="add">ADD</string>
    <string name="add_student_info">Add Student Info</string>
    <string name="major">major</string>
    <string name="enter">Enter</string>
    <string name="enter_message">Enter message</string>
    <string name="no_feedback">No feedback</string>
    <string name="avei">AdvisorEditInfo</string>
    <string name="next">Next</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="after_entering_required_info_click_and_hold_on_the_schedule_you_wish_to_edit">After entering required info, click and hold on the schedule you wish to edit.</string>
    <string name="submit">Submit</string>
    <string name="click_and_hold_on_the_schedule_you_wish_to_edit_or_delete">Click and hold on the schedule you wish to edit or delete.</string>
    <string name="clear_all">Clear All</string>
    <string name="advisor_main">Advisor</string>
    <string name="student_main">Student</string>

</resources>
