<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
	android:background="@drawable/background">

	<Button 
	    android:id="@+id/clickbookappointment"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/book_appointment"/>
	<Button 
	    android:id="@+id/clickchat"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/chat"/>
	<Button 
	    android:id="@+id/clickgrade"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/grade"/>
	<Button 
	    android:id="@+id/clickcourse"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/course"/>	
   	<Button 
	    android:id="@+id/clickfeedback"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/feedback"/>
</LinearLayout>
