<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >
<TextView
    android:id="@+id/coursetitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/courses"
    android:textSize="25sp"/>
<TextView
    android:id="@+id/showcourse"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:text="@string/show_courses_here_"
    />
<Button
    android:id="@+id/add"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_course"/>
<Button
    android:id="@+id/swap"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/swap_courses"/>
<Button
    android:id="@+id/drop"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/drop_course"/>
</LinearLayout>
