<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/studentcomputingid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_s_computing_id" />

    <EditText
        android:id="@+id/editCIDL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/computing_id">
    </EditText>

    <TextView
        android:id="@+id/studentpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_" />

    <EditText
        android:id="@+id/editPwL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >

        
    </EditText>

    <Button
        android:id="@+id/sLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sSignUp" />

</LinearLayout>