<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:text="@string/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFirst" />

    <TextView
        android:text="@string/last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:id="@+id/txtLast" />

    <TextView
        android:text="@string/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDay"
        android:layout_marginStart="25dp" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:id="@+id/txtTime" />

</LinearLayout>