<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/studentid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_student_s_id_"/>
    <EditText
        android:id="@+id/enterid1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <TextView
        android:id="@+id/studentid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_student_s_computing_id_"/>
    <EditText
        android:id="@+id/enterid2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button 
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custombutton"
        android:text="@string/search"/>

</LinearLayout>
